package com.swp391.backend.enums;

public enum PaymentOption {
    deposit,
    full,
    remaining
}
