package com.swp391.backend.enums;

public enum PaymentStatus {
    pending,
    paid,
    failed,
    expired,
    refunded,
    partially_refunded
}
