package com.swp391.backend.enums;

public enum RefundStatus {
    requested,
    approved,
    rejected,
    processing,
    completed,
    failed
}
