@startuml

skinparam classAttributeIconSize 0
skinparam linetype polyline

class BookingController <<controller>> {
    -bookingWorkflowService : BookingWorkflowService

    +bookingDetail(@PathVariable Long bookingId) : Object
}

class BookingWorkflowService <<service>> {
    -support : DomainSupportService

    +bookingDetail(bookingId : Long) : Map<String, Object>
}

class DomainSupportService <<service>> {
    -bookingRepository : BookingRepository
    -paymentRepository : PaymentRepository
    -invoiceRepository : InvoiceRepository
    -refundRepository : RefundRepository

    +getBooking(bookingId : Long) : Booking
    +paymentStatus(booking : Booking) : String
    +invoiceSummary(invoice : Invoice) : Map<String, Object>
    +paymentSummary(payment : Payment) : Map<String, Object>
}

interface BookingRepository <<repository>> {
    +findById(id : Long) : Optional<Booking>
}

interface PaymentRepository <<repository>> {
    +findByBooking_BookingIdOrderByPaymentIdDesc(bookingId : Long) : List<Payment>
}

interface InvoiceRepository <<repository>> {
    +findByBooking_BookingId(bookingId : Long) : Optional<Invoice>
}

interface RefundRepository <<repository>> {
    +findByBooking_BookingIdOrderByRefundIdDesc(bookingId : Long) : List<Refund>
}

class Booking <<entity>> {
    -bookingId : Long
    -bookingCode : String
    -status : BookingStatus
    -paidAmount : BigDecimal
    -remainingAmount : BigDecimal
}

class Invoice <<entity>> {
    -invoiceId : Long
    -booking : Booking
    -invoiceCode : String
    -fieldAmount : BigDecimal
    -serviceAmount : BigDecimal
    -discountAmount : BigDecimal
    -totalAmount : BigDecimal
    -paidAmount : BigDecimal
    -remainingAmount : BigDecimal
    -refundAmount : BigDecimal
    -issuedAt : LocalDateTime
}

class Payment <<entity>> {
    -paymentId : Long
    -booking : Booking
    -paymentCode : String
    -paymentOption : PaymentOption
    -paymentMethod : PaymentMethod
    -amount : BigDecimal
    -status : PaymentStatus
    -transactionCode : String
    -gatewayMessage : String
    -paidAt : LocalDateTime
}

class Refund <<entity>> {
    -refundId : Long
    -booking : Booking
    -payment : Payment
    -refundCode : String
    -refundAmount : BigDecimal
    -refundReason : String
    -status : RefundStatus
    -transactionCode : String
    -requestedAt : LocalDateTime
    -processedAt : LocalDateTime
}

class AuditEntity <<entity>> {
    -createdAt : LocalDateTime
    -updatedAt : LocalDateTime
}

enum PaymentOption {
    + deposit
    + full
    + remaining
}

enum PaymentMethod {
    + cash
    + online_sandbox
    + paypal_sandbox
    + bank_transfer
}

enum PaymentStatus {
    + pending
    + paid
    + failed
    + expired
    + refunded
    + partially_refunded
}

enum RefundStatus {
    + requested
    + processing
    + completed
    + failed
}

enum BookingStatus {
    + pending
    + confirmed
    + checked_in
    + completed
    + cancelled
    + no_show
    + expired
    + rejected
}

' Relationships
BookingController ..> BookingWorkflowService
BookingWorkflowService ..> DomainSupportService
DomainSupportService ..> BookingRepository
DomainSupportService ..> PaymentRepository
DomainSupportService ..> InvoiceRepository
DomainSupportService ..> RefundRepository
DomainSupportService ..> Booking
DomainSupportService ..> Invoice
DomainSupportService ..> Payment
DomainSupportService ..> Refund
BookingRepository --> Booking
PaymentRepository --> Payment
InvoiceRepository --> Invoice
RefundRepository --> Refund
Invoice --> Booking
Payment --> Booking
Refund --> Booking
Refund --> Payment
Booking -|> AuditEntity
Invoice -|> AuditEntity
Payment -|> AuditEntity
Refund -|> AuditEntity
Payment --> PaymentOption
Payment --> PaymentMethod
Payment --> PaymentStatus
Refund --> RefundStatus
Booking --> BookingStatus

@enduml
